@@ -1,3 +1,8 @@
+2003-12-20  Zoltan Varga  <vargaz@freemail.hu>
+
+	* typemanager.cs:  Change 'modules' field so it now contains Modules not
+	ModuleBuilders.
+
 2003-12-20  Martin Baulig  <martin@ximian.com>
 
 	* class.cs (TypeContainer.DefineMembers): Don't do the CS0649 check here.
